kubernetes/omop-services/002_omop-db-cdm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omop-postgres
  namespace: datamesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: omop-postgres
  template:
    metadata:
      labels:
        app: omop-postgres
    spec:
      containers:
        - name: omop-postgres
          image: ghcr.io/idea4rc/omop-deploy:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
