kubernetes/omop-services/003_omop-db-cdm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omop-cdm-deployment
  namespace: datamesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: omop-postgres
  template:
    metadata:
      labels:
        app: omop-postgres
    spec:
      containers:
        - name: omop-postgres
          image: omop-cdm-postgres:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
