kubernetes/omop-services/003_omop-db-svc-datamesh.yaml
apiVersion: v1
kind: Service
metadata:
  name: omop-postgres
  namespace: datamesh
spec:
  selector:
    app: omop-postgres
  ports:
  - port: 5432
    name: omop-postgres
    appProtocol: tcp
