kubernetes/omop-services/004_omop-db-svc-datamesh.yaml
apiVersion: v1
kind: Service
metadata:
  name: omop-postgres-service
  namespace: datamesh
spec:
  selector:
    app: omop-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
