kubernetes/omop-services/007_ohdsi-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ohdsi-api
  namespace: datamesh
spec:
  selector:
    app: omop-postgres
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
