kubernetes/omop-services/008_ohdsi-api-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ohdsi-api
  namespace: datamesh
spec:
  hosts:
  - "*"
  gateways:
  - idea-gateway
  http:
  - match:
    - uri:
        prefix: /ohdsi-api/
    rewrite:
        uri: "/"
    route:
    - destination:
        host: ohdsi-api.default.svc.cluster.local
        port:
          number: 8000
